--- a/gestaoVendas/src/main/webapp/jsputeis/includejs.html
+++ b/gestaoVendas/src/main/webapp/jsputeis/includejs.html
@@ -1,1 +1,1 @@
-<a href="webjars/bootstrap/5.0.1/js/bootstrap.min.js">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
