--- a/src/main/webapp/ecommerce/paginas/nuteis/login.xhtml
+++ b/src/main/webapp/ecommerce/paginas/nuteis/login.xhtml
@@ -6,14 +6,16 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:p="http://primefaces.org/ui">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Ecommerce</title>
-</head>
-<p:spinner />
-<body>
+<h:head>
 
+	<title> Ecommerce </title>
 
+</h:head>
 
-</body>
+<h:body>
+	<p:panel >
+		
+		<p:outputLabel>Hello World</p:outputLabel>
+	</p:panel>
+</h:body>
 </html>
