--- a/src/main/webapp/ecommerce/paginas/uteis/barramenu.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/barramenu.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	<div class="row">
 		<div class="col" align="center">
-			<h:inputHidden id="token" value="#{gerenciadorTokenGem.clienteToken}"></h:inputHidden>
+			<h:inputHidden id="token" value="#{gerenciadorToken.clienteToken}"></h:inputHidden>
 		</div> 
 	</div> 
 	<div class="row d-none">
@@ -11,11 +11,11 @@
 	</div>
 	<div class="row">
 		<div class="col mt-2" align="center">
-			<h:commandLink style="color: gray; font-size: 8pt" action="#{loginControllerGem.realizarLogout}">
+			<h:commandLink style="color: gray; font-size: 8pt" action="#{loginController.realizarLogout}">
 				<span class='far fa-user'></span>
 			</h:commandLink>
 			<label>&#160;</label>
-			<h:commandLink style="color: gray; font-size: 8pt" value="Usuário atual: #{loginControllerGem.usuarioDtoGem.nome} (clique aqui para trocar de usuário)" action="#{loginControllerGem.realizarLogout}" immediate="true"></h:commandLink>
+			<h:commandLink style="color: gray; font-size: 8pt" value="Usuário atual: #{loginController.funcionarioDto.nome} (clique aqui para trocar de usuário)" action="#{loginController.realizarLogout}" immediate="true"></h:commandLink>
 		</div>
 	</div>
 	<div class="row mb-3">
