--- a/src/main/webapp/ecommerce/paginas/uteis/errogenerico.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/errogenerico.xhtml
@@ -2,8 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-	<title>Gem</title>
-	<ui:include src="/gem/paginas/uteis/scripts.xhtml" />
+	<title>Ecommerce</title>
+	<ui:include src="/ecommerce/paginas/uteis/scripts.xhtml" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </h:head>
 <h:body class="bg-info">
@@ -17,11 +17,11 @@
 			<div class="row">
 				<div class="col-8 offset-2 mt-4 text-dark" style="text-align: center;">
 					Ocorreu uma exceção no sistema. Por favor entre em contato com o suporte. <br /> <br />
-					<h:commandLink action="/gem/paginas/uteis/inicial.xhtml">
+					<h:commandLink action="/ecommerce/paginas/uteis/inicial.xhtml">
 						<span style="font-size: 20pt;" class="fas fa-home text-info"></span>
 					</h:commandLink>
 					<h:outputLabel>&#160;</h:outputLabel>
-					<h:commandLink action="/gem/paginas/uteis/inicial.xhtml" value="Ir para a tela inicial" class="text-info"></h:commandLink>
+					<h:commandLink action="/ecommerce/paginas/uteis/inicial.xhtml" value="Ir para a tela inicial" class="text-info"></h:commandLink>
 					<br /> <br />
 					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#erro">
 						<span class="fas fa-list-ul"></span> Mostrar detalhes
