--- a/src/main/webapp/ecommerce/paginas/uteis/inicial.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/inicial.xhtml
@@ -15,7 +15,7 @@
 			<br></br>
 			<div class="row">
 				<div class="col" align="center">
-					<span style="font-size: 90pt;" class="fas fa-tools text-info"></span>
+					<span style="font-size: 90pt; color: #17a2b8;" class="fa fa-shopping-cart" aria-hidden="true"></span>
 				</div>
 			</div>
 			<div class="row mt-3">
