--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -12,7 +12,7 @@
 			<ui:include src="/ecommerce/paginas/uteis/barramenu.xhtml" />
 			<div class="row mb-3 mt-5" align="center">
 				<div class="col-12">
-					<h:commandLink action="#{softwareController.prepararConsulta}" value="Software" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+					<h:commandLink action="#{estabelecimentoController.alterarEstabelecimento}" value="Estabelecimento" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
 			<div class="row mb-3" align="center">
