--- a/src/main/webapp/ecommerce/paginas/cadastros/estabelecimento.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/estabelecimento.xhtml
@@ -16,18 +16,19 @@
 					<h:messages showDetail="false" showSummary="true" globalOnly="true" infoClass="text-info mensagemInfo" warnClass="text-warning mensagemWarning" errorClass="text-dark mensagemError" layout="list" />
 				</div>
 			</div>
-			<br></br>
-			<div class="row mb-3 mt-5">
-				<div class="col-4 offset-4">
-					<label>Razão Social</label>
-					<h:inputText value="#{estabelecimentoController.dto.nome}" class="form-control" id="txtusuario" autocomplete="off" required="true"></h:inputText>
-					<h:message for="txtusuario" showDetail="false" showSummary="true" styleClass="error"  />
-				</div>
+			<div class="row mb-3 ml-5 pl-4">
+				<div class="col-7 offset-2">
+						<label>Razão Social</label>
+						<h:inputText value="#{estabelecimentoController.dto.nome}" class="form-control"  align="center" id="txtusuario" autocomplete="off" required="true"></h:inputText>
+						<h:message for="txtusuario" showDetail="false" showSummary="true" styleClass="error"  />
+					</div>
 			</div>
-			<div class="row mt-3">
-				<div class="col" align="center">
-					<span style="font-size: 20pt; font-style: italic;" class="text-info">&nbsp; Make it better...</span>
-				</div>
+			<div class="row mb-3 ml-5 pl-4">
+				<div class="col-7 offset-2">
+						<label>Razão Social</label>
+						<h:inputText value="#{estabelecimentoController.dto.nome}" class="form-control" id="txtcnpj" autocomplete="off" required="true"></h:inputText>
+						<h:message for="txtusuario" showDetail="false" showSummary="true" styleClass="error"  />
+					</div>
 			</div>
 		</div>
 	</h:form>
