--- a/src/main/webapp/ecommerce/paginas/cadastros/estabelecimento.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/estabelecimento.xhtml
@@ -42,7 +42,7 @@
 						<f:ajax listener="#{estabelecimentoController.validarCnpj}"
 							execute="txtcnpj" render="txtcnpj"></f:ajax>
 					</h:inputText>
-					<h:message for="msg" showDetail="false" showSummary="true"
+					<h:message for="txtcnpj" showDetail="false" showSummary="true"
 						styleClass="error" />
 				</div>
 			</div>
