--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -17,7 +17,7 @@
 			</div>
 			<div class="row mb-3" align="center">
 				<div class="col-12">
-					<h:commandLink action="#{tipoSoftwareController.prepararConsulta}" value="Tipo de Software" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+					<h:commandLink action="#{cidadeController.prepararConsulta}" value="Cidade" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
 			<div class="row mb-3" align="center">
