--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -22,7 +22,7 @@
 			</div>
 			<div class="row mb-3" align="center">
 				<div class="col-12">
-					<h:commandLink action="#{tipoSolicitacaoController.prepararConsulta}" value="Tipo de Solicitação" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+					<h:commandLink action="#{funcionarioController.prepararConsulta}" value="Funcionário" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
 			<div class="row mb-3" align="center">
