--- a/src/main/webapp/ecommerce/paginas/cadastros/cadastrarFuncionario.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/cadastrarFuncionario.xhtml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
-	<title>Mib</title>
+	<title>Ecommerce</title>
 	<script>
-		function ativarTabPrincipal(){
-	   		$('#myTab a[href="#principal"]').tab('show');
+		function ativarTabPrincipal() {
+			$('#myTab a[href="#principal"]').tab('show');
 		}
 	</script>
 	<ui:include src="/ecommerce/paginas/uteis/scripts.xhtml" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </h:head>
-<h:body class="bg-info" onload="setFocus('form:nome'); ativarTabPrincipal()">
+<h:body class="bg-info"
+	onload="setFocus('form:nome'); ativarTabPrincipal()">
 	<h:form id="form" class="needs-validation" pt:novalidate="novalidate">
 		<div class="container bg-light rounded-bottom divcentral">
-			<ui:include src="/ecommerce//paginas/uteis/barramenu.xhtml" />
+			<ui:include src="/ecommerce/paginas/uteis/barramenu.xhtml" />
 			<div class="row mb-3">
 				<div class="col-12" align="center">
 					<h1 align="center">Cadastro de Funcionário</h1>
@@ -23,71 +28,134 @@
 			<div class="row mb-3">
 				<div class="col-6 offset-3">
 					<ul class="nav nav-tabs" role="tablist" id="myTab">
-						<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#principal">Principal</a></li>
-						<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#permissoes">Permissões</a></li>
+						<li class="nav-item"><a class="nav-link" data-toggle="tab"
+							href="#principal">Principal</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							data-toggle="tab" href="#permissoes">Permissões</a></li>
 					</ul>
 					<div class="tab-content">
 						<div id="principal" class="container tab-pane">
 							<div class="row mb-3 mt-4">
 								<div class="col-12">
 									<label>Nome</label> <label class="text-muted">(*)</label>
-									<h:inputText value="#{funcionarioController.funcionarioDto.nome}" class="form-control" required="true" autocomplete="off" id="nome" maxlength="100"></h:inputText>
-									<h:message for="nome" showDetail="false" showSummary="true" styleClass="error"  />
+									<h:inputText
+										value="#{funcionarioController.funcionarioDto.nome}"
+										class="form-control" required="true" autocomplete="off"
+										id="nome" maxlength="100"></h:inputText>
+									<h:message for="nome" showDetail="false" showSummary="true"
+										styleClass="error" />
 								</div>
 							</div>
 							<div class="row mb-2">
 								<div class="col-6">
 									<label>CPF</label>
-									<h:inputText value="#{funcionarioController.funcionarioDto.cpf}" class="form-control" autocomplete="off" maxlength="20" onkeypress="cpf(this,event);" converter="converterCPF" id="cpf">
+									<h:inputText
+										value="#{funcionarioController.funcionarioDto.cpf}"
+										class="form-control" autocomplete="off" maxlength="20"
+										onkeypress="cpf(this,event);" converter="converterCPF"
+										id="cpf">
 									</h:inputText>
-									<h:message for="cpf" showDetail="false" showSummary="true" styleClass="error"  />
+									<h:message for="cpf" showDetail="false" showSummary="true"
+										styleClass="error" id="cpfmensage" />
 								</div>
 							</div>
 							<div class="row mb-2">
-								<div class="col-6">
+								<div class="col-8">
 									<label>Endereco</label>
-									<h:inputText pt:type="date" value="#{funcionarioController.funcionarioDto.endereco}" class="form-control" converter="converterDataInput" id="dataCadastro" required="true"></h:inputText>
-									<h:message for="dataCadastro" showDetail="false" showSummary="true" styleClass="error"  />
+									<h:inputText
+										value="#{funcionarioController.funcionarioDto.endereco}"
+										class="form-control" id="endereco" required="true"></h:inputText>
+									<h:message for="endereco" showDetail="false" showSummary="true"
+										styleClass="error" />
 								</div>
 							</div>
 							<div class="row mb-2">
 								<div class="col-6">
 									<label>Bairro</label>
-									<h:inputText value="#{funcionarioController.funcionarioDto.bairro}" class="form-control" autocomplete="off" maxlength="20"></h:inputText>
+									<h:inputText
+										value="#{funcionarioController.funcionarioDto.bairro}"
+										class="form-control" autocomplete="off" maxlength="20"></h:inputText>
 								</div>
 							</div>
 							<div class="row mb-3">
 								<div class="col-6">
 									<label>Login</label> <label class="text-muted">(*)</label>
-									<h:inputText value="#{funcionarioController.funcionarioDto.login}" class="form-control" required="true" autocomplete="off" maxlength="30" id="login"></h:inputText>
-									<h:message for="login" showDetail="false" showSummary="true" styleClass="error"  />
+									<h:inputText
+										value="#{funcionarioController.funcionarioDto.login}"
+										class="form-control" required="true" autocomplete="off"
+										maxlength="30" id="login"></h:inputText>
+									<h:message for="login" showDetail="false" showSummary="true"
+										styleClass="error" />
 								</div>
 							</div>
 							<div class="row mb-3">
 								<div class="col-6">
 									<label>Senha</label> <label class="text-muted">(*)</label>
-									<h:inputSecret value="#{funcionarioController.funcionarioDto.senha}" class="form-control" required="true" id="senha" autocomplete="off" maxlength="30" redisplay="true"></h:inputSecret>
-									<h:message for="senha" showDetail="false" showSummary="true" styleClass="error"  />
+									<h:inputSecret
+										value="#{funcionarioController.funcionarioDto.senha}"
+										class="form-control" required="true" id="senha"
+										autocomplete="off" maxlength="30" redisplay="true"></h:inputSecret>
+									<h:message for="senha" showDetail="false" showSummary="true"
+										styleClass="error" />
 								</div>
 							</div>
+
+							<div class="row mb-3 mr-5">
+								<label class="col-12">Cidade</label>
+								<div class="form-inline">
+									<div class="form-group ml-3">
+										<h:inputText value="#{funcionarioController.funcionarioDto.idCidade}"
+											class="form-control col-2" id="txtIdCidade"
+											autocomplete="off" required="true">
+											<f:ajax
+												listener="#{funcionarioController.carregarCidade}"
+												execute="txtIdCidade" render="txtIdCidade txtNomeCidade"></f:ajax>
+										</h:inputText>
+										<label>&#160;</label>
+										<h:inputText
+											value="#{funcionarioController.funcionarioDto.nomeCidade}"
+											class="form-control col-8" id="txtNomeCidade"
+											autocomplete="off" required="true" disabled="true"></h:inputText>
+										<label>&#160;</label>
+										<button type="button" class="btn btn-primary"
+											data-toggle="modal" data-target="#pesquisarModalCidade"
+											id="botaoProcurar">
+											<span class="fas fa-search"></span>
+										</button>
+										<h:message for="txtIdCidade" showDetail="false"
+											showSummary="true" styleClass="error" />
+									</div>
+								</div>
+
+							</div>
+
 							<div class="row mb-3">
 								<div class="col-6">
 									<label>Ativo</label>
-									<h:selectBooleanCheckbox value="#{funcionarioController.funcionarioDto.ativo}" class="form-control" required="true" id="ativo" autocomplete="off" maxlength="30" redisplay="true"></h:selectBooleanCheckbox>
-									<h:message for="ativo" showDetail="false" showSummary="true" styleClass="error"  />
+									<h:selectBooleanCheckbox
+										value="#{funcionarioController.funcionarioDto.ativo}"
+										class="form-control" required="true" id="ativo"
+										autocomplete="off" redisplay="true"></h:selectBooleanCheckbox>
+									<h:message for="ativo" showDetail="false" showSummary="true"
+										styleClass="error" />
 								</div>
 							</div>
 						</div>
-						
+
 						<div id="permissoes" class="container tab-pane active">
 							<div align="right">
-								<h:commandLink value="Marcar todas permissões" class="btn btn-outline-light text-dark btn-sm mt-3" action="#{funcionarioController.selecionarTodos}">
+								<h:commandLink value="Marcar todas permissões"
+									class="btn btn-outline-light text-dark btn-sm mt-3"
+									action="#{funcionarioController.selecionarTodos}">
 									<f:ajax execute="@all" render="@all"></f:ajax>
 								</h:commandLink>
 							</div>
 							<div class="row mb-3 mt-4">
-								<h:selectManyCheckbox value="#{funcionarioController.funcionarioDto.listaPermissoes}" layout="pageDirection" border="0" class="table-borderless table-hover">
-									<f:selectItems value="#{funcionarioController.listaPermissaoExistente}" var="p" itemLabel="#{p.nomePermissao}"></f:selectItems>
+								<h:selectManyCheckbox value="#{funcionarioController.funcionarioDto.listaPermissoes}"
+									 layout="pageDirection" border="0"
+									class="table-borderless table-hover">
+									<f:selectItems value="#{funcionarioController.listaPermissaoExistente}"
+										var="p" itemLabel="#{p.nomePermissao}" itemValue="#{p}"></f:selectItems>
 								</h:selectManyCheckbox>
 							</div>
 						</div>
@@ -96,12 +164,16 @@
 			</div>
 			<div class="row mb-2">
 				<div class="col-6 offset-3" align="right">
-					<h:commandButton action="#{funcionarioController.confirmar}" value="Gravar" class="btn btn-primary" style="width: 120px" onclick="return validarSubmit();"></h:commandButton>
+					<h:commandButton action="#{funcionarioController.confirmar}"
+						value="Gravar" class="btn btn-primary" style="width: 120px"
+						onclick="return validarSubmit();"></h:commandButton>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-6 offset-3" align="right">
-					<h:commandButton action="#{funcionarioController.cancelar}" value="Cancelar" immediate="true" class="btn btn btn-danger" style="width: 120px"></h:commandButton>
+					<h:commandButton action="#{funcionarioController.cancelar}"
+						value="Cancelar" immediate="true" class="btn btn btn-danger"
+						style="width: 120px"></h:commandButton>
 				</div>
 			</div>
 			<br></br> <br></br>
