--- a/src/main/webapp/ecommerce/paginas/cadastros/consultarFornecedor.xhtml
+++ b/src/main/webapp/ecommerce/paginas/cadastros/consultarFornecedor.xhtml
@@ -37,7 +37,7 @@
 			</div>
 			<div class="row">
 				<div class="col-12">
-					<h:dataTable id="table" border="0" value="#{fornecedorController.listaFornecedoresCadastrados}" var="s" class="table table-hover" columnClasses="center, left, colunaEditar, colunaExcluir">
+					<h:dataTable id="table" border="0" value="#{fornecedorController.listaFornecedoresCadastrados}" var="s" class="table table-hover" columnClasses="center, left, left, colunaEditar, colunaExcluir">
 						<h:column id="column1">
 							<f:facet name="header">
 								<h:outputText value="ID"></h:outputText>
