--- a/src/main/webapp/ecommerce/paginas/uteis/errogenerico.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/errogenerico.xhtml
@@ -13,6 +13,14 @@
 	<h:form>
 		<div class="container bg-light rounded-bottom divcentral">
 			<br></br>
+			<div class="row d-none">
+				<div class="col" align="center">
+					<h:messages showDetail="true" id="msg" showSummary="true"
+						globalOnly="true" infoClass="text-info mensagemInfo"
+						warnClass="text-warning mensagemWarning"
+						errorClass="text-dark mensagemError" layout="list" rendered="false"/>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col mt-3" align="center">
 					<span style="font-size: 80pt;" class="fas fa-exclamation text-info"></span>
@@ -42,7 +50,7 @@
 						<h:inputTextarea value="#{erroGenericoController.mensagem}"
 							id="mensagemErro" rows="16" style="font-size: 9pt; width: 1110px">
 						</h:inputTextarea>
-						<h:message for="mensagemErro" rendered="true"></h:message>
+						<h:message for="mensagemErro"></h:message>
 					</div>
 				</div>
 			</div>
