--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -22,6 +22,11 @@
 			</div>
 			<div class="row mb-3" align="center">
 				<div class="col-12">
+					<h:commandLink action="#{clienteController.prepararConsulta}" value="Cliente" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+				</div>
+			</div>
+			<div class="row mb-3" align="center">
+				<div class="col-12">
 					<h:commandLink action="#{fornecedorController.prepararConsulta}" value="Fornecedor" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
