--- a/src/main/webapp/ecommerce/paginas/uteis/errogenerico.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/errogenerico.xhtml
@@ -18,7 +18,7 @@
 					<h:messages showDetail="true" id="msg" showSummary="true"
 						globalOnly="true" infoClass="text-info mensagemInfo"
 						warnClass="text-warning mensagemWarning"
-						errorClass="text-dark mensagemError" layout="list" rendered="false"/>
+						errorClass="text-dark mensagemError" layout="list" rendered="true"/>
 				</div>
 			</div>
 			<div class="row">
