--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -37,7 +37,12 @@
 			</div>
 			<div class="row mb-3" align="center">
 				<div class="col-12">
-					<h:commandLink action="#{usuarioController.prepararConsulta}" value="Usuário" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+					<h:commandLink action="#{grupoController.prepararConsulta}" value="Grupo" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+				</div>
+			</div>
+			<div class="row mb-3" align="center">
+				<div class="col-12">
+					<h:commandLink action="#{grupoController.prepararConsulta}" value="Produto" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
 			<div class="row mb-3" align="center">
