--- a/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
+++ b/src/main/webapp/ecommerce/paginas/uteis/menucadastro.xhtml
@@ -42,7 +42,7 @@
 			</div>
 			<div class="row mb-3" align="center">
 				<div class="col-12">
-					<h:commandLink action="#{grupoController.prepararConsulta}" value="Produto" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
+					<h:commandLink action="#{produtoController.prepararConsulta}" value="Produto" immediate="true" styleClass="btn btn-info" style="width: 180px"></h:commandLink>	
 				</div>
 			</div>
 			<div class="row mb-3" align="center">
